apps/n8n/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  hostnames:
    - n8n.tomasmerino.com
  parentRefs:
    - name: homelab-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: n8n
          port: 5678
